--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="blog">
-      <div class="date"><18th Janurary 2021>
+      <div class="date"><18th Janurary 2021></div>
         </div>
       </div>
   </body>
