--- a/blog.html
+++ b/blog.html
@@ -3,12 +3,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title></title>
   </head>
   <body>
     <div class="blog">
       <div class="date"><18th Janurary 2021></div>
-        </div>
+      <h2>This is my First Blog</h2>
+<p class="paragraph>
+
       </div>
   </body>
 </html>
