--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1> Hello, World!!! </h1>
-    <p> class="p-welcome">Testing</p>
+    <p class="p-welcome">Testing</p>
     <a href="blog.html">  Blog</a>
   </body>
 </html>
