--- a/blog.html
+++ b/blog.html
@@ -3,17 +3,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <title>My Blog</title>
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    
   </head>
   <body>
-    <div class="blog">
-      <div class="date">18th Janurary 2021</div>
-      <h2>This is my First Blog</h2>
-<p class="paragraph">
-The first week of semester 2 , me and my group partner got all the project parts together that we had ordered. We began by installing arduino ide on our laptops , to get a basic understanding of how the programming language works. We noticed our first minor problem that the usb cable we were using was just simply charging the arduino board. Any program we tried to test would not work , so we ordered a new usb cable that would be specifically for transferring data.
+    <h1>Blog!!!</h1>
+    <a href="indez.html">  Home</a>    
+    <div class="blog"> <div class="date">18th Janurary 2021</div>
+    <h2>This is my First Blog</h2>
+      <p class="paragraph">
+        The first week of semester 2 , me and my group partner got all the project parts together that we had ordered. We began by installing arduino ide on our laptops , to get a basic understanding of how the programming language works. We noticed our first minor problem that the usb cable we were using was just simply charging the arduino board. Any program we tried to test would not work , so we ordered a new usb cable that would be specifically for transferring data.
 
-
-      </div>
+    </div>
   </body>
 </html>
