--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,6 @@
   <body>
     <h1> Hello, World!!! </h1>
     <p class="p-welcome">Testing</p>
-    <a href="/blog/index.html">  Blog</a>
+    <a href="../blog">  Blog</a>
   </body>
 </html>
