--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="welcome-text">
             <h1>Homepage welcome</h1>
-            <a href="/blogs">Blog</a>
+            <a href="blogs">Blog</a>
 
   </body>
 </html>
