--- a/blogs/index.html
+++ b/blogs/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Blog!!!</h1>
-    <a href="../matthewk98.github.io">  Home</a>
+    <a href="matthewk98.github.io/">  Home</a>
     <div class="blog"> <div class="date">18th Janurary 2021</div>
     <h2>This is my First Blog</h2>
       <p class="paragraph">
