--- a/blogs/index.html
+++ b/blogs/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
+    <meta charse="utf-8">
     <title>My Blog</title>
     <link rel="stylesheet" href="style.css">
-    
   </head>
   <body>
+    
     <h1>Blog!!!</h1>
     <a href="matthewk98.github.io/">  Home</a>
     <div class="blog"> <div class="date">18th Janurary 2021</div>
