--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
           </div>
           <ul class="nav-area">
             <li><a href="#">home</a>></li>
+            <li><a href="#">about</a>></li>
             <li><a href="#">blog</a>></li>
-            <li><a href="#">videos</a>></li>
-            <li><a href="#">contact</a>></li>
+            <li><a href="#">gallery</a>></li>
           </ul>>
         </div>
 
         <div class="welcome-text">
-            <h1>Homepage welcome</h1>
+            <h1>CA326 Third year project</h1>
             <a href="blogs">Blog</a>
 
   </body>
