--- a/blogs/index.html
+++ b/blogs/index.html
@@ -9,7 +9,7 @@
   <body>
     
     <h1>Blog!!!</h1>
-    <a href="../">  Home</a>
+    <a href="../../">  Home</a>
     <div class="blog"> <div class="date">18th Janurary 2021</div>
     <h2>This is my First Blog</h2>
       <p class="paragraph">
