doing blog page

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <meta charse="utf-8">
@@ -7,14 +6,22 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
-    <h1>Blog!!!</h1>
     <a href="../../">  Home</a>
-    <div class="blog"> <div class="date">18th Janurary 2021</div>
+    <div class="blog"> 
+      <div class="date">18th January 2021</div>
+        </div>
     <h2>This is my First Blog</h2>
-      <p class="paragraph">
-      blah blah blah
-
-    </div>
+<p class="paragraph">
+  The first week of semester 2 , me and my group partner got all the project parts together that we had ordered. We began by installing arduino ide on our laptops , to get a basic understanding of how the programming language works. 
+  <p>We noticed our first minor problem that the usb cable we were using was just simply charging the arduino board.</p>
+  <p>Any program we tried to test would not work , so we ordered a new usb cable that would be specifically for transferring data.</p>
+</p>
+    <div class="blog"> 
+      <div class="date">25th January 2021</div>
+        </div>
+    <h2>This is my Second Blog</h2>
+<p class="paragraph">
+  The second week of semester two...
+</p>
   </body>
 </html>
