--- a/blogs/index.html
+++ b/blogs/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charse="utf-8">
     <title>My Blog</title>
-    <link rel="stylesheet" href="blogs/style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <a href="../../">  Home</a>
