--- a/blogs/index.html
+++ b/blogs/index.html
@@ -10,18 +10,24 @@
     <div class="blog"> 
       <div class="date">18th January 2021</div>
         </div>
-    <h2>This is my First Blog</h2>
+    <h2>First Blog</h2>
 <p class="paragraph">
-  The first week of semester 2 , me and my group partner got all the project parts together that we had ordered. We began by installing arduino ide on our laptops , to get a basic understanding of how the programming language works. 
-  <p>We noticed our first minor problem that the usb cable we were using was just simply charging the arduino board.</p>
+  The first week of semester two , me and my group partner got all the project parts together that we had ordered. We began by installing arduino ide on our laptops , to get a basic understanding of how the programming language works. We noticed our first minor problem that the usb cable we were using was just simply charging the arduino board.</p>
   <p>Any program we tried to test would not work , so we ordered a new usb cable that would be specifically for transferring data.</p>
 </p>
+<hr>
+</div>
     <div class="blog"> 
       <div class="date">25th January 2021</div>
         </div>
-    <h2>This is my Second Blog</h2>
+    <h2>Second Blog</h2>
 <p class="paragraph">
-  The second week of semester two...
-</p>
+  The second week of semester two, we decided to create a github.io website to post blogs , any information and progress of our third year project
+
+  <p>The new micro usb cable arrived that we had ordered , allowing us to properly test programs on the arduino board. We started designing a protype and learning the functionallity of the microphone and accelerometer</p>
+
+  <p>We also were learning about the Arduino IDE programming langauge that we had installed on our pcs.We noticed the IDE gave various example code to help learn the fundamentals and test run them on the arduino board</p>
+<hr>
+</div>
   </body>
 </html>
