--- a/blogs/index.html
+++ b/blogs/index.html
@@ -6,9 +6,21 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="../../">  Home</a>
+    <header>
+    <ul class="nav-area">
+            <li><a href="../../">home</a>></li>
+            <li><a href="#">about</a>></li>
+            <li><a href="#">blog</a>></li>
+            <li><a href="#">gallery</a>></li>
+
+          </ul>
+          
+    </header>
+
     <div class="blog"> 
+
       <div class="date">18th January 2021</div>
+
         </div>
     <h2>First Blog</h2>
 <p class="paragraph">
@@ -29,5 +41,6 @@
   <p>We also were learning about the Arduino IDE programming langauge that we had installed on our pcs.We noticed the IDE gave various example code to help learn the fundamentals and test run them on the arduino board</p>
 <hr>
 </div>
+  
   </body>
 </html>
