--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
+  <head>  
     <meta charse="utf-8">
     <title></title>
     <link rel="stylesheet" href="style.css">
@@ -15,7 +15,7 @@
           <ul class="nav-area">
             <li><a href="#">home</a>></li>
             <li><a href="#">about</a>></li>
-            <li><a href="#">blog</a>></li>
+            <li><a href="blogs">blog</a>></li>
             <li><a href="#">gallery</a>></li>
           </ul>>
         </div>
