--- a/about/index.html
+++ b/about/index.html
@@ -9,8 +9,8 @@
     <header>
     <ul class="nav-area">
             <li><a href="../../">home</a>></li>
-            <li><a href="../about/">about</a>></li>
-            <li><a href="#">blog</a>></li>
+            <li><a href="#">about</a>></li>
+            <li><a href="../blogs/">blog</a>></li>
             <li><a href="#">gallery</a>></li>
 
           </ul>
