--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           </div>
           <ul class="nav-area">
             <li><a href="#">home</a>></li>
-            <li><a href="#">about</a>></li>
+            <li><a href="about">about</a>></li>
             <li><a href="blogs">blog</a>></li>
             <li><a href="#">gallery</a>></li>
           </ul>>
