--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
             <li><a href="../../">home</a>></li>
             <li><a href="#">about</a>></li>
             <li><a href="../blogs/">blog</a>></li>
-            <li><a href="#">gallery</a>></li>
+            <li><a href="../gallery/">gallery</a>></li>
 
           </ul>
           
