--- a/blogs/index.html
+++ b/blogs/index.html
@@ -10,7 +10,7 @@
     <ul class="nav-area">
             <li><a href="../../">home</a>></li>
             <li><a href="../about/">about</a>></li>
-            <li><a href="../blog/">blog</a>></li>
+            <li><a href="#">blog</a>></li>
             <li><a href="../gallery/">gallery</a>></li>
 
           </ul>
