Added Third Blog Entry

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -12,9 +12,7 @@
             <li><a href="../about/">about</a>></li>
             <li><a href="#">blog</a>></li>
             <li><a href="../gallery/">gallery</a>></li>
-
           </ul>
-          
     </header>
 
     <div class="blog"> 
@@ -41,6 +39,13 @@
   <p>We also were learning about the Arduino IDE programming langauge that we had installed on our pcs.We noticed the IDE gave various example code to help learn the fundamentals and test run them on the arduino board</p>
 <hr>
 </div>
-  
+      <div>
+        <h2>Third Blog</h2>
+        <p class = "paragraph">
+          The third week of semester two, We started working on the LED Matrix.
+          <p> We connected the LED Matrix onto the Arduino board using female to male wires and crocodiles clips into the Appropriate pins with the aid of the datasheet provided for the MAX7219 LED Driver. </p>
+          <p>The VBATT pin from the Arduino is connected to the VCC of the LED which is used to power the LED, The GND is connected to the GND, The DIN is connected to the #6 Pin in the Arduino board which is responsible 
+            for the interpreting the code that is inputted, The CS is conntected to the #12 Pin which is responsible for the input delay. The CLK Pin is connected to the #10 Pin.</p>
+      </div>
   </body>
 </html>
