--- a/blogs/index.html
+++ b/blogs/index.html
@@ -40,6 +40,9 @@
 <hr>
 </div>
       <div>
+        <div class="blog"> 
+          <div class="date">1st February 2021</div>
+            </div>
         <h2>Third Blog</h2>
         <p class = "paragraph">
           The third week of semester two, We started working on the LED Matrix.
