Added images and video prototype

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -19,16 +19,10 @@
 
     <h1>Image gallery</h1>
         <div class="gallery">
-          <a href="images/pic1.jpg"><img src= "images/pic1-small.jpg"></a>
-          <a href="images/pic1.jpg"><img src= "images/pic1-small.jpg"></a>
-          <a href="images/pic1.jpg"><img src= "images/pic1-small.jpg"></a>
-          <a href="images/pic1.jpg"><img src= "images/pic1-small.jpg"></a>
-          <a href="images/pic1.jpg"><img src= "images/pic1-small.jpg"></a>
-          <a href="images/pic1.jpg"><img src= "images/pic1-small.jpg"></a>
-          <a href="images/pic1.jpg"><img src= "images/pic1-small.jpg"></a>
-          <a href="images/pic1.jpg"><img src= "images/pic1-small.jpg"></a>
-          <a href="images/pic1.jpg"><img src= "images/pic1-small.jpg"></a>
-          <a href="images/pic1.jpg"><img src= "images/pic1-small.jpg"></a>
+          <a href="images/board.jpg"><img src= "images/board-small.jpg"></a>
+          <a href="images/led.jpg"><img src= "images/led-small.jpg"></a>
+          <a href="images/wires.jpg"><img src= "images/wires-small.jpg"></a>
+          <a href="images/crocwire.jpg"><img src= "images/crocwire-small.jpg"></a>
 
 </div>
   
