Add prototype description

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -50,6 +50,7 @@
           <p>The VBATT pin from the Arduino is connected to the VCC of the LED which is used to power the LED, The GND is connected to the GND, The DIN is connected to the #6 Pin in the Arduino board which is responsible 
             for the interpreting the code that is inputted, The CS is conntected to the #12 Pin which is responsible for the input delay. The CLK Pin is connected to the #10 Pin.</p>
             <video width="320" height="240" controls>
+          <p>We completed our prototype , which was just one of the most basic programs we could produce. The prototype basically printed "Hello World" on the LED matrix , which can be seen in the video below. </p>
               <source src= "prototype.mp4" type="video/mp4">
             </video>
       </div>
