--- a/blogs/index.html
+++ b/blogs/index.html
@@ -85,9 +85,31 @@
     </div>
     
     <h2>Fifth Blog</h2>
-    <p class = "paragraph"></p>
+    <p class = "paragraph">
+    We began week five by creating a Testing document "testing.md" on our gitlab repository, this was created in the Testing directory. This document will describe each testing case that takes place for the duration of our project. (please see link below)
 
-    <p></p>
+    <p><a href="https://gitlab.computing.dcu.ie/ocionnm3/2021-ca326-mkenny-clothing-basedwearabletechnology/blob/master/Testing/testing.md">Testing Document</a> 
+
+    <p>Jude added images of the serial plotter to the Testing directory. These were images of common phrases used for pattern matching for example "hello" , "how are you" , "what's up" etc.. Which can be seen here:
+    </p>
+
+    <p><a href="https://gitlab.computing.dcu.ie/ocionnm3/2021-ca326-mkenny-clothing-basedwearabletechnology/tree/master/Testing/voice_graph">Voice graph directory</a> </p>
+
+
+    <p>I (Matthew), added two new subdirectories to the Testing directory. The first being "Testing sounds" which will store audio and video files displaying various sounds that we used to test. I added a video displaying a continuous sound and once the continuous sound played for at least 5 seconds a certain text will be printed on the serial monitor. </p> 
+
+    <p><a href="https://gitlab.computing.dcu.ie/ocionnm3/2021-ca326-mkenny-clothing-basedwearabletechnology/blob/master/Testing/Testing_sounds/continuous_sound.mp4">Video of continuous sound</a> </p>
+
+    <p>We also began adding all relevant programs to the code directory, this would be all programs we have used throughout the project. This will show the life cycle of our code development for our final product</p>
+
+    <p><a href="https://gitlab.computing.dcu.ie/ocionnm3/2021-ca326-mkenny-clothing-basedwearabletechnology/tree/master/code">Code Directory</a> </p>
+
+    <p>I worked on creating a simpler system to understand the reading of the accelerometer. Similar to what I done for the microphone converting from baud to decibel, I created a method which will calibrate the X, Y and Z sensors for more understandable reading. I added some video files to the "Testing_accelerometer" directory displaying the testing. Which can be seen below</p>
+
+    <a href="https://gitlab.computing.dcu.ie/ocionnm3/2021-ca326-mkenny-clothing-basedwearabletechnology/tree/master/Testing/Testing_accelerometer">Calibrate accelerometer (testing videos) </a> 
+
+
+    <p>In conclusion at the end of week five semester two, we were satisfied that we could display various animations depending on volume and time length of volume input. Which is currently helping us create a more advanced pattern matching system for various volume inputs. We will be uploading more testing, code, sound and video files on to our gitlab soon. Our main issue is still with the accelerometer and led matrix being ran at the same time. Possibly the CircuitPlayground.begin and led control libraries are conflicting as they both define the data pin or spi. When we execute the Led matrix and accelerometer, the Led matrix would flash rapidly and not display our desired animation. </p>
 
 <hr> <! -- Break line -->
     <div class="blog"> 
