--- a/blogs/index.html
+++ b/blogs/index.html
@@ -86,9 +86,9 @@
     
     <h2>Fifth Blog</h2>
     <p class = "paragraph">
-    We began week five by creating a Testing document "testing.md" on our gitlab repository, this was created in the Testing directory. This document will describe each testing case that takes place for the duration of our project. (please see link below)
+    We began week five by creating a Testing document "testing.md" on our gitlab repository, this was created in the Testing directory. This document will describe each testing case that takes place for the duration of our project. (please see link below)</p>
 
-    <p><a href="https://gitlab.computing.dcu.ie/ocionnm3/2021-ca326-mkenny-clothing-basedwearabletechnology/blob/master/Testing/testing.md">Testing Document</a> 
+    <p><a href="https://gitlab.computing.dcu.ie/ocionnm3/2021-ca326-mkenny-clothing-basedwearabletechnology/blob/master/Testing/testing.md">Testing Document</a></p>
 
     <p>Jude added images of the serial plotter to the Testing directory. These were images of common phrases used for pattern matching for example "hello" , "how are you" , "what's up" etc.. Which can be seen here:
     </p>
@@ -106,7 +106,7 @@
 
     <p>I worked on creating a simpler system to understand the reading of the accelerometer. Similar to what I done for the microphone converting from baud to decibel, I created a method which will calibrate the X, Y and Z sensors for more understandable reading. I added some video files to the "Testing_accelerometer" directory displaying the testing. Which can be seen below</p>
 
-    <a href="https://gitlab.computing.dcu.ie/ocionnm3/2021-ca326-mkenny-clothing-basedwearabletechnology/tree/master/Testing/Testing_accelerometer">Calibrate accelerometer (testing videos) </a> 
+    <p><a href="https://gitlab.computing.dcu.ie/ocionnm3/2021-ca326-mkenny-clothing-basedwearabletechnology/tree/master/Testing/Testing_accelerometer">Calibrate accelerometer (testing videos) </a></p>
 
 
     <p>In conclusion at the end of week five semester two, we were satisfied that we could display various animations depending on volume and time length of volume input. Which is currently helping us create a more advanced pattern matching system for various volume inputs. We will be uploading more testing, code, sound and video files on to our gitlab soon. Our main issue is still with the accelerometer and led matrix being ran at the same time. Possibly the CircuitPlayground.begin and led control libraries are conflicting as they both define the data pin or spi. When we execute the Led matrix and accelerometer, the Led matrix would flash rapidly and not display our desired animation. </p>
