Added image of the new WS218 Panel into gallery

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -23,6 +23,7 @@
           <a href="images/led.jpg"><img src= "images/led-small.jpg"></a>
           <a href="images/wires.jpg"><img src= "images/wires-small.jpg"></a>
           <a href="images/crocwire.jpg"><img src= "images/crocwire-small.jpg"></a>
+          <a href="images/ws218.jpg"><img src= "images/ws218-small.jpg"></a>
 
 </div>
   
