--- a/about/index.html
+++ b/about/index.html
@@ -16,8 +16,15 @@
           </ul>
           
     </header>
+    <div class="blog"> 
+      <div class="date">ca326 project</div>
+    </div>
 
-    <p class="paragraph">The following functional specification discusses our third-year project which is based on the 'Clothing-based Wearable Technology' idea. In essence, the product we will be developing is a mask with a responsive LED light strip using a flora arduino board with a microphone that will light up to emulate a mouth speaking or head movement using various animations depending on sound volume , head motion and what words are used as input.</p>
+   
+   <h2>About</h2>
+    <p class="paragraph">The general functionality of the product will be built on using a Flora Arduino board with incorporating programmable LED lights matrix into masks that will mimic a mouth moving whenever the wearer speaks or has head movement (non talking). The LED lights will mimic the mouth's movement with various animations, that are programmed in the arduino ide.The Arduino programming language runs machine code and it will function based on the Arduino ide using an unique Arduino C/C++ programming language. The main system of the product will be tested using a breadboard , once it has passed the testing phase the flora arduino board will incorporate into the mask using conductive thread and soldered wires. The parts will be sewed using a sewing machine and therefore when the user attaches the mask to his/her face it will be well stable. To prevent damage and soakage to the parts a filter will be added as an extra layer.
+    .The Flora Arduino Board will be programmed using arduino IDE specific language that incorporates a mixture of C/C++.Within the mask’s layers, it will have an Arduino Kit, accelerometer, microphone module, programmable LED strips, and a filter. The mask is a pouch-like design where the electronics will reside so that it can be easily removed and replaced and so that mask can be re-washed and re-used. The lights will be sewed using conductive thread as it's a more practical than ordinary thread , as electrical current will be applied via the arduino board.</p>
+    <hr> <! -- Break line -->
 </div>
   
   </body>
