--- a/blogs/index.html
+++ b/blogs/index.html
@@ -140,12 +140,18 @@
 
     <p><a href="https://gitlab.computing.dcu.ie/ocionnm3/2021-ca326-mkenny-clothing-basedwearabletechnology/commit/741f0164a388aded4594cd7eaf7bea68ed8091c7">Technical Manual (md File)</a></p>
 
+    <p>Matthew added a button condition which will be used to activate the pattern matching mode & also a improved pattern matching system</p>
+
+    <p>The software development is now complete</p>
+
 <hr> <! -- Break line -->
     <div class="blog"> 
       <div class="date">8h March 2021</div>
     </div>
     
     <h2>Eight Blog</h2>
+
+     <p class = "paragraph">Now that software development is complete , we just focused on completing the repo</p>
 
   </body>
 </html>
