Added info into eight blog

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -140,7 +140,11 @@
 
     <p><a href="https://gitlab.computing.dcu.ie/ocionnm3/2021-ca326-mkenny-clothing-basedwearabletechnology/commit/741f0164a388aded4594cd7eaf7bea68ed8091c7">Technical Manual (md File)</a></p>
 
-    <p>Matthew added a button condition which will be used to activate the pattern matching mode & also a improved pattern matching system</p>
+    <p>Matthew added a button condition which will be used to activate the pattern matching mode & also a improved pattern matching system. When in pattern matching mode the LED colours are blue.</p>
+
+    <p><a href="https://gitlab.computing.dcu.ie/ocionnm3/2021-ca326-mkenny-clothing-basedwearabletechnology/commit/12ef1424e0d52ce268a6fcc1643d71f1c1767da2">Button for pattern matching</a></p>
+
+    <p class = "paragraph">Matthew started Unit testing for the Arduino board and added how he went about doing the unit testing and addded the code into the md file</p>
 
     <p>The software development is now complete</p>
 
@@ -151,7 +155,11 @@
     
     <h2>Eight Blog</h2>
 
-     <p class = "paragraph">Now that software development is complete , we just focused on completing the repo</p>
+     <p class = "paragraph">In the final week, Jude spent the time into finishing up the documentation by adding more information and images to the technical manual and the user manual. Matthew added integrationg testing diagram into the testing md file, also added more problems that we have come across during the project into the tecnical manual.</p>
+     <p><a href="https://gitlab.computing.dcu.ie/ocionnm3/2021-ca326-mkenny-clothing-basedwearabletechnology/blob/master/technical_manual/Tech_manual.md">Technical manual</a></p>
+     <p><a href="https://gitlab.computing.dcu.ie/ocionnm3/2021-ca326-mkenny-clothing-basedwearabletechnology/blob/master/user-manual/user-manual.md">User Manual</a></p>
+     <p class = "paragraph">Jude improved on the conditions for the pattern matching and added the condtions needed for a smiling animation to show up in the LED panel. Matthew added comments within the code to further explain what each line of code does. Jude started working on soldering wires on the back of the WS218 panel and planned on soldering wires into the Arduino board but decided not to as messed up on the first WS218 panel.Instead of soldering wires into the Arduino board he created new shorter and smaller crocodiles clips that can be fit into the pouch of the mask in fear of also messing up again. </p>
+     <p class = "paragraph">We started working on the Demo video, Jude was responsible for taking pictures of each the components to be used in the video and wearing the mask and displaying the features that this mask has. Matthew was responsible for, creating slides, talking over, editing and explaining the demo for the videoe. </p>
 
   </body>
 </html>
